--- a/src/main/resources/templates/layout/head.html
+++ b/src/main/resources/templates/layout/head.html
@@ -3,8 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MCSI</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="font/bootstrap-icons.min.css">
-    <link rel="apple-touch-icon" href="img/icon.png">
-    <link rel="shortcut icon" href="img/icon.ico">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/font/bootstrap-icons.min.css">
+    <link rel="apple-touch-icon" href="/img/icon.png">
+    <link rel="shortcut icon" href="/img/icon.ico">
 </head>
