feat: 서버 검색 기능 개선 및 데이터 구조 수정 - 서버 검색 페이지네이션 로직 개선 - ServerData 엔티티 수정 - 서버 리포지토리 쿼리 최적화 - 검색 결과 표시 레이아웃 개선

--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -8,10 +8,7 @@
         <div class="collapse navbar-collapse" id="main-navbar">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/add">ADD</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/search">SERVER INFO</a>
+                    <a class="nav-link" href="/add">SERVER ADD</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
@@ -25,6 +22,10 @@
                     </div>
                 </li>
             </ul>
+            <form class="d-flex" action="/search" method="get">
+                <input name="query" class="form-control me-sm-2" type="search" placeholder="Server Name or IP">
+                <button class="btn btn-light " type="submit">Search</button>
+            </form>
         </div>
     </div>
 </nav>
