--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -56,6 +56,7 @@
 </div>
 <div th:replace="layout/footer :: footer">
 </div>
+
 <script>
     (() => {
         'use strict';
@@ -72,6 +73,7 @@
         });
     })();
 </script>
+<script src="/js/bootstrap.bundle.min.js"></script>
 <script th:if="${message}" th:inline="javascript">
     alert([[${message}]]);
 </script>
